--- a/SalesData12months.ipynb
+++ b/SalesData12months.ipynb
@@ -1,6 +1,6 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 2,
   "metadata": {
     "colab": {
       "name": "SalesData12months.ipynb",
@@ -16,79 +16,75 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dekennedy/SalesData_12months/blob/main/SalesData12months.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ],
       "metadata": {
         "id": "view-in-github",
         "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dekennedy/SalesData_12months/blob/main/SalesData12months.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "DeoNA2kYL07v"
-      },
       "source": [
         "First we import the different libraries well need to do out analysis.\n",
         "\n",
         "\n"
-      ]
+      ],
+      "metadata": {
+        "id": "DeoNA2kYL07v"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "nF8J-1lQLgpj"
-      },
+      "execution_count": 1,
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "nF8J-1lQLgpj"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-LzyQ7wRLyfT"
-      },
       "source": [
         "Next I'lll Import the data into a Pandas Data Frame.\n",
         "\n",
         "There are 12 files. One for each month, so I'll need to look over ths function to combine all of the data."
-      ]
+      ],
+      "metadata": {
+        "id": "-LzyQ7wRLyfT"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Il_dY6SSLtuF"
-      },
+      "execution_count": null,
       "source": [
-        "df = pd.read_cvs('my path here')\n",
+        "path = ('my path here')\n",
         "\n",
-        "for file in files \n",
+        "for f in file\n",
         "\n",
-        "#remove the headers from all but the fist file to keep the data clean.\n",
-        "\n",
-        "appends data ( skip rows 0)\n",
-        "\n",
+        "df = pd.read_csv(path)[skiprows = 0]\n",
+        "df_combine = df_combine.append(df)\n",
         "\n",
         "\n",
         "\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "Il_dY6SSLtuF"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [],
       "metadata": {
         "id": "UMgbdnFuLxp_"
-      },
-      "source": [
-        ""
-      ]
+      }
     }
   ]
 }
